# OmniReach-CLI

./: .gitignore  LICENSE  README.md  omnireach.py  pyproject.toml
src/: __init__.py  config.py  exporter.py  llm.py  processor.py
src/ui/: __init__.py  dashboard.py
