[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "omnireach-cli"
version = "0.1.0"
description = "轻量级终端AI Agent多平台互联网信息触达引擎 / Lightweight CLI AI Agent Multi-Platform Internet Information Reach Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["cli", "web-scraping", "ai-agent", "multi-platform", "search-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]

[project.scripts]
omnireach = "omnireach:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools]
py-modules = ["omnireach"]
